making some updates

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-relish",
+  "name": "dev-relish-yeesh",
   "version": "1.0.0",
   "description": "An async standup tool",
   "author": "shortdiv",
